Fix where to start thumbnail formatting bug on small screens

--- a/source/style.css
+++ b/source/style.css
@@ -251,7 +251,7 @@ a:link, a:visited {
   text-decoration: none;
 }
 
-.wheretostart td {
+.wheretostart .heading {
   vertical-align: middle;
 }
 
